--- a/configs/preprocess.yaml
+++ b/configs/preprocess.yaml
@@ -3,8 +3,8 @@ preprocess:
     _target_: torch.utils.data.ConcatDataset
     datasets:
       -
-        _target_: src.dataset.jvs_corpus.JVSCorpus
-        root: /home/ayu/datasets/jvs_ver1
+        _target_: miipher_2.dataset.jvs_corpus.JVSCorpus
+        root: /home/ayu/datasets/jvs_ver1/
   degradation:
     format_encoding_pairs:
       - format: mp3
@@ -15,11 +15,11 @@ preprocess:
         compression: 64
       - format: mp3
         compression: 128
-      - format: vorbis
+      - format: ogg
         compression: -1
-      - format: vorbis
+      - format: ogg
         compression: 0
-      - format: vorbis
+      - format: ogg
         compression: 1
       - format: wav
         encoding: ALAW
@@ -67,3 +67,4 @@ preprocess:
     pattern: /home/ayu/datasets/jvs/jvs-val-%06d.tar.gz
   val_size: 600
   n_repeats: 4
+sample_rate: 24000
