--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "librosa>=0.11.0",
     "lightning>=2.5.1.post0",
     "numpy>=2.2.6",
+    "peft>=0.15.2",
     "pillow>=11.2.1",
     "pyroomacoustics>=0.8.4",
     "soundfile>=0.13.1",
