--- a/configs/infer.yaml
+++ b/configs/infer.yaml
@@ -2,3 +2,4 @@ adapter: exp/adapter/adapter_final.pt
 vocoder: exp/hifigan_ft/g_400k.pth
 in: noisy.wav
 out: restored.wav
+hubert_layer: 9  # 使用するHuBERTの層（0-based、トレーニング時と同じ値を指定）
