--- a/configs/adapter.yaml
+++ b/configs/adapter.yaml
@@ -11,10 +11,13 @@ batch_size: 8            # GPU1枚あたり
 epochs: 5
 
 optim:
-  lr: 2.0e-4
+  lr: 2.0e-5
   weight_decay: 0.01
   betas: [0.9, 0.95]
-  max_grad_norm: 1.0  # 勾配クリッピングの最大ノルム
+  max_grad_norm: 1.0
+  scheduler:
+    name: "linear"
+    warmup_steps: 4000
 
 loader:
   num_workers: 8
