--- a/configs/adapter.yaml
+++ b/configs/adapter.yaml
@@ -6,6 +6,7 @@ model:
 dataset:
   path_pattern: /home/ayu/datasets/jvs_preprocessed/jvs-train-{000000..000020}.tar.gz
   shuffle: 1000          # WebDataset 内部 shuffle バッファ
+  num_examples: 15000
 batch_size: 16            # GPU1枚あたり
 epochs: 1
 
