--- a/configs/adapter.yaml
+++ b/configs/adapter.yaml
@@ -8,7 +8,7 @@ dataset:
   shuffle: 1000          # WebDataset 内部 shuffle バッファ
   num_examples: 15000
 batch_size: 16            # GPU1枚あたり
-epochs: 1
+epochs: 2
 
 training:
   gradient_accumulation_steps: 1
@@ -21,8 +21,8 @@ optim:
   betas: [0.9, 0.95]
   max_grad_norm: 1.0
   scheduler:
-    name: "linear"
-    warmup_steps: 1000
+    name: "constant_with_warmup"
+    warmup_steps: 100
 
 loader:
   num_workers: 8
@@ -30,6 +30,13 @@ loader:
 
 save_dir: exp/adapter
 log_interval: 100        # iter ごとに損失表示
+
+# Checkpoint configuration
+checkpoint:
+  save_interval: 1000      # 1kステップごとにチェックポイント保存
+  resume_from: null        # 再開用チェックポイントパス
+  keep_last_n: 5          # 最新N個のチェックポイントを保持
+  save_wandb_metadata: true # wandb情報も保存
 
 # Wandb logging configuration
 wandb:
