--- a/configs/hifigan_finetune.yaml
+++ b/configs/hifigan_finetune.yaml
@@ -6,13 +6,13 @@ model:
 dataset:
   path_pattern: /home/ayu/datasets/jvs_preprocessed/jvs-train-{000000..000020}.tar.gz
   shuffle: 1000
-batch_size: 4
+batch_size: 1
 loader:
   num_workers: 8
   pin_memory: true
 
-adapter_ckpt: exp/adapter/adapter_final.pt
-pretrained_gen: assets/hifigan_universal_v1.pt   # 事前学習済み G
+adapter_ckpt: exp/adapter/checkpoint_6k.pt
+pretrained_gen: assets/universal_hifigan_v1/g_02500000
 
 # ----- Generator アーキテクチャ -----
 upsample_rates:        [8, 8, 2, 2] # 8*8*2*2 = 256
@@ -23,7 +23,7 @@ resblock_kernel_sizes: [3, 7, 11]
 resblock_dilations: [[1, 3, 5], [1, 3, 5], [1, 3, 5]]
 
 # ----- 学習ハイパーパラメータ -----
-steps: 400_000
+steps: 400000
 lr: 2.0e-4
 betas: [0.9, 0.95]
 lambda_stft: 1.0
@@ -31,7 +31,7 @@ lambda_mpd: 2.5
 lambda_msd: 2.5
 
 save_dir: exp/hifigan_ft
-log_interval: 1_000     # iter ごとにログ
+log_interval: 10     # iter ごとにログ
 
 # Checkpoint configuration
 checkpoint:
