--- a/configs/hifigan_finetune.yaml
+++ b/configs/hifigan_finetune.yaml
@@ -12,7 +12,7 @@ loader:
   pin_memory: true
 
 adapter_ckpt: exp/adapter/checkpoint_6k.pt
-pretrained_gen: assets/universal_hifigan_v1/g_02500000
+pretrained_gen: exp/hifigan_pretrain/checkpoint_100k.pt
 
 # ----- Generator アーキテクチャ -----
 upsample_rates:        [8, 8, 2, 2] # 8*8*2*2 = 256
@@ -37,7 +37,7 @@ log_interval: 10     # iter ごとにログ
 checkpoint:
   save_interval: 1000      # 1kステップごとにチェックポイント保存
   resume_from: null        # 再開用チェックポイントパス
-  keep_last_n: 5          # 最新N個のチェックポイントを保持
+  keep_last_n: 500          # 最新N個のチェックポイントを保持
   save_wandb_metadata: true # wandb情報も保存
 
 # Wandb logging configuration
