--- a/configs/hifigan_pretrain.yaml
+++ b/configs/hifigan_pretrain.yaml
@@ -17,7 +17,7 @@ loader:
 # 事前学習では学習済みAdapterは不要
 adapter_ckpt: null
 
-# この事前学習ステージでは、公式の事前学習済みモデルをベースに学習します
+# この事前学習ステージでは、公式の事前学習済みモデルをベースに学習する
 pretrained_gen: assets/universal_hifigan_v1/g_02500000
 
 # ----- Generator アーキテクチャ -----
@@ -27,7 +27,6 @@ resblock_kernel_sizes: [3, 7, 11]
 resblock_dilations: [[1, 3, 5], [1, 3, 5], [1, 3, 5]]
 
 # ----- 学習ハイパーパラメータ -----
-# 事前学習用のステップ数（必要に応じて調整してください）
 steps: 100000
 lr: 2.0e-4
 betas: [0.9, 0.95]
@@ -49,7 +48,6 @@ checkpoint:
 # Wandb logging configuration
 wandb:
   enabled: true
-  # プロジェクト名を事前学習用に変更
   project: "miipher-2-hifigan-pretrain"
   entity: null
   name: null
