--- a/configs/hifigan_pretrain.yaml
+++ b/configs/hifigan_pretrain.yaml
@@ -1,11 +1,9 @@
 model:
   hubert_model_name: "rinna/japanese-hubert-large"
   hubert_layer: 12
-  # 事前学習ではAdapterは使用しない
-  adapter_hidden_dim: null
+  adapter_hidden_dim: null # 事前学習ではAdapterは使用しない
 
 dataset:
-  # Webdatasetは共通ですが、ローダー側でクリーンな音声のみを利用します
   path_pattern: /home/ayu/datasets/jvs_preprocessed/jvs-train-{000000..000020}.tar.gz
   shuffle: 1000
 
@@ -17,7 +15,7 @@ loader:
 # 事前学習では学習済みAdapterは不要
 adapter_ckpt: null
 
-# この事前学習ステージでは、公式の事前学習済みモデルをベースに学習する
+# 公式の事前学習済みモデルをベースに学習する
 pretrained_gen: assets/universal_hifigan_v1/g_02500000
 
 # ----- Generator アーキテクチャ -----
@@ -30,19 +28,19 @@ resblock_dilations: [[1, 3, 5], [1, 3, 5], [1, 3, 5]]
 steps: 100000
 lr: 2.0e-4
 betas: [0.9, 0.95]
-lambda_stft: 1.0 # この値はhifigan_finetune.yamlにはありませんが、学習スクリプトで参照されるため念のため記載
-lambda_mpd: 2.5  # 同上
-lambda_msd: 2.5  # 同上
+lambda_stft: 1.0 # 不要かも
+lambda_mpd: 2.5
+lambda_msd: 2.5
 
 # チェックポイントの保存先を事前学習用に変更
 save_dir: exp/hifigan_pretrain
-log_interval: 10
+log_interval: 100
 
 # Checkpoint configuration
 checkpoint:
   save_interval: 1000
   resume_from: null
-  keep_last_n: 5
+  keep_last_n: 500
   save_wandb_metadata: true
 
 # Wandb logging configuration
