--- a/configs/adapter.yaml
+++ b/configs/adapter.yaml
@@ -5,9 +5,12 @@ model:
 
 dataset:
   path_pattern: /home/ayu/datasets/jvs_preprocessed/jvs-train-{000000..000020}.tar.gz
+  val_path_pattern: /home/ayu/datasets/jvs_preprocessed/jvs-val-{000000..000001}.tar.gz
   shuffle: 1000          # WebDataset 内部 shuffle バッファ
-batch_size: 16            # GPU1枚あたり
+batch_size: 16
 steps: 60000
+validation_interval: 1000
+
 
 training:
   gradient_accumulation_steps: 1
