--- a/configs/adapter.yaml
+++ b/configs/adapter.yaml
@@ -7,10 +7,10 @@ dataset:
   path_pattern: /home/ayu/datasets/jvs_preprocessed/jvs-train-{000000..000020}.tar.gz
   val_path_pattern: /home/ayu/datasets/jvs_preprocessed/jvs-val-{000000..000001}.tar.gz
   shuffle: 1000          # WebDataset 内部 shuffle バッファ
-batch_size: 16
+batch_size: 8
 steps: 60000
 validation_interval: 1000
-
+validation_batches: 25
 
 training:
   gradient_accumulation_steps: 1
