--- a/configs/hifigan_finetune.yaml
+++ b/configs/hifigan_finetune.yaml
@@ -5,14 +5,15 @@ model:
 
 dataset:
   path_pattern: /home/ayu/datasets/jvs_preprocessed/jvs-train-{000000..000020}.tar.gz
+  val_path_pattern: /home/ayu/datasets/jvs_preprocessed/jvs-val-{000000..000001}.tar.gz
   shuffle: 1000
 batch_size: 1
 loader:
   num_workers: 8
   pin_memory: true
 
-adapter_ckpt: exp/adapter/checkpoint_6k.pt
-pretrained_gen: exp/hifigan_pretrain/checkpoint_100k.pt
+adapter_ckpt: exp/adapter/checkpoint_60k.pt
+pretrained_gen: exp/hifigan_pretrain/checkpoint_23k.pt
 
 # ----- Generator アーキテクチャ -----
 upsample_rates:        [8, 8, 2, 2]
@@ -22,14 +23,16 @@ resblock_dilations: [[1, 3, 5], [1, 3, 5], [1, 3, 5]]
 
 # ----- 学習ハイパーパラメータ -----
 steps: 200000
-lr: 2.0e-4
+validation_interval: 1000
+validation_batches: 25
+lr: 2.0e-5
 betas: [0.9, 0.95]
 lambda_stft: 1.0
 lambda_mpd: 2.5
 lambda_msd: 2.5
 
 save_dir: exp/hifigan_ft
-log_interval: 10     # iter ごとにログ
+log_interval: 100     # iter ごとにログ
 
 # Checkpoint configuration
 checkpoint:
