--- a/configs/hifigan_pretrain.yaml
+++ b/configs/hifigan_pretrain.yaml
@@ -5,6 +5,7 @@ model:
 
 dataset:
   path_pattern: /home/ayu/datasets/jvs_preprocessed/jvs-train-{000000..000020}.tar.gz
+  val_path_pattern: /home/ayu/datasets/jvs_preprocessed/jvs-val-{000000..000001}.tar.gz
   shuffle: 1000
 
 batch_size: 1
@@ -26,7 +27,9 @@ resblock_dilations: [[1, 3, 5], [1, 3, 5], [1, 3, 5]]
 
 # ----- 学習ハイパーパラメータ -----
 steps: 100000
-lr: 2.0e-4
+validation_interval: 1000
+validation_batches: 25
+lr: 2.0e-5
 betas: [0.9, 0.95]
 lambda_stft: 1.0 # 不要かも
 lambda_mpd: 2.5
