--- a/configs/hifigan_pretrain_layer_9_mhubert_147.yaml
+++ b/configs/hifigan_pretrain_layer_9_mhubert_147.yaml
@@ -35,6 +35,9 @@ lambda_stft: 1.0 # 不要かも
 lambda_mpd: 2.5
 lambda_msd: 2.5
 
+training:
+  gradient_accumulation_steps: 4
+
 # チェックポイントの保存先を事前学習用に変更
 save_dir: exp/hifigan_pretrain_layer_9_mhubert_147
 log_interval: 100
