--- a/configs/infer.yaml
+++ b/configs/infer.yaml
@@ -1,5 +1,5 @@
 adapter: exp/adapter/adapter_final.pt
-vocoder: exp/hifigan_ft/g_400k.pth
+vocoder: exp/hifigan_ft_layer_4_mhubert_147/g_400k.pth
 in: noisy.wav
 out: restored.wav
-hubert_layer: 9  # 使用するHuBERTの層（0-based、トレーニング時と同じ値を指定）
+hubert_layer: 4
