評価コードを実装

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,17 @@ dependencies = [
     "accelerate>=1.7.0",
     "datasets>=3.6.0",
     "hydra-core>=1.3.2",
+    "jiwer>=4.0.0",
     "librosa>=0.11.0",
     "lightning>=2.5.1.post0",
+    "matplotlib>=3.10.3",
     "numpy>=2.2.6",
     "peft>=0.15.2",
     "pillow>=11.2.1",
     "pyroomacoustics>=0.8.4",
+    "pysptk>=1.0.1",
+    "pyworld>=0.3.5",
+    "seaborn>=0.13.2",
     "soundfile>=0.13.1",
     "speechbrain>=1.0.0",
     "torch>=2.7.0",
