--- a/configs/hifigan_finetune_layer_6_mhubert_147.yaml
+++ b/configs/hifigan_finetune_layer_6_mhubert_147.yaml
@@ -26,8 +26,15 @@ resblock_dilations: [[1, 3, 5], [1, 3, 5], [1, 3, 5]]
 steps: 200000
 validation_interval: 1000
 validation_batches: 25
-lr: 2.0e-4
-betas: [0.9, 0.95]
+
+optim:
+  lr: 2.0e-4 # 初期LR
+  betas: [0.9, 0.95]
+  scheduler:
+    name: "cosine"
+    warmup_steps: 5000
+    min_lr_ratio: 0.1 # 最低 LR = initial_lr × 0.1
+
 lambda_stft: 1.0
 lambda_mpd: 2.5
 lambda_msd: 2.5
