--- a/configs/fleurs_r_preprocess.yaml
+++ b/configs/fleurs_r_preprocess.yaml
@@ -1,6 +1,10 @@
 preprocess:
   preprocess_dataset:
     _target_: miipher_2.dataset.fleurs_r.FleursRCorpus
+    datasets:
+      -
+        _target_: miipher_2.dataset.fleurs_r.FleursRCorpus
+        root: /home/ayu/datasets/fleurs-r/
     root: /home/ayu/datasets/fleurs-r/
   degradation:
     format_encoding_pairs:
@@ -64,5 +68,6 @@ preprocess:
     pattern: /home/ayu/datasets/fleurs-r_preprocessed/fleurs-r-val-%06d.tar.gz
   val_size: 600
   n_repeats: 4
+  feature_cache_dir: /home/ayu/datasets/hubert_cache/fleurs_r_corpus
 sampling_rate: 22050
 
