--- a/configs/fleurs_r_preprocess.yaml
+++ b/configs/fleurs_r_preprocess.yaml
@@ -1,11 +1,12 @@
 preprocess:
+  # 'preprocess_dataset'セクションをFleursRCorpusの正しい呼び出し方に修正
   preprocess_dataset:
     _target_: miipher_2.dataset.fleurs_r.FleursRCorpus
-    datasets:
-      -
-        _target_: miipher_2.dataset.fleurs_r.FleursRCorpus
-        root: /home/ayu/datasets/fleurs-r/
     root: /home/ayu/datasets/fleurs-r/
+    # subsetやlanguageを指定することも可能（デフォルトは"all"）
+    # subset: "all"
+    # language: "all"
+
   degradation:
     format_encoding_pairs:
       - format: mp3
@@ -54,12 +55,11 @@ preprocess:
         max: 30.0
         min: 5.0
       patterns:
-        -
-          - /home/audio/TAU2023/dataset/TAU-urban-acoustic-scenes-2022-mobile-development/audio/
+        - - /home/audio/TAU2023/dataset/TAU-urban-acoustic-scenes-2022-mobile-development/audio/
           - '**/*.wav'
-        -
-          - /home/audio/TAU2021/datasets/TAU-urban-acoustic-scenes-2020-mobile-development/audio/
+        - - /home/audio/TAU2021/datasets/TAU-urban-acoustic-scenes-2020-mobile-development/audio/
           - '**/*.wav'
+
   train_tar_sink:
     _target_: webdataset.ShardWriter
     pattern: /home/ayu/datasets/fleurs-r_preprocessed/fleurs-r-train-%06d.tar.gz
@@ -69,5 +69,5 @@ preprocess:
   val_size: 600
   n_repeats: 4
   feature_cache_dir: /home/ayu/datasets/hubert_cache/fleurs_r_corpus
-sampling_rate: 22050
 
+sampling_rate: 22050
