--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "speechbrain>=1.0.0",
     "torch>=2.7.0",
     "torchaudio>=2.7.0",
+    "torchinfo>=1.8.0",
     "tqdm>=4.67.1",
     "transformers>=4.40.0",
     "trl[peft]>=0.18.1",
