--- a/configs/infer_dir.yaml
+++ b/configs/infer_dir.yaml
@@ -1,6 +1,6 @@
 # --- 一括処理の基本設定 ---
-input_dir: "/home/ayu/GitHub/miipher-plaoground/samples_8khz"   # 音声ファイルが入っているディレクトリ
-output_dir: "/home/ayu/GitHub/miipher-plaoground/8khz_miipher2" # 修復後の音声を出力するディレクトリ
+input_dir: "/home/ayu/GitHub/miipher-plaoground/PA_E3"   # 音声ファイルが入っているディレクトリ
+output_dir: "/home/ayu/GitHub/miipher-plaoground/PA_E3" # 修復後の音声を出力するディレクトリ
 
 # 処理対象とする音声ファイルの拡張子リスト
 extensions:
@@ -11,10 +11,11 @@ device: "cuda" # "cuda" または "cpu"
 
 # --- チェックポイントのパス ---
 # Adapter学習で生成された最終モデル
-adapter_ckpt: "exp/adapter_l7/checkpoint_197k.pt"
+adapter_ckpt: "exp/adapter_layer_6_mhubert_147/checkpoint_199k.pt"
 
-# HiFi-GAN Fine-tuningで生成されたチェックポイント
-vocoder_ckpt: "exp/hifigan_pretrain_layer_6_mhubert_147/checkpoint_98k.pt"
+# Lightning SSL-Vocoderで学習されたチェックポイント (.ckpt形式)
+# ssl-vocodersリポジトリで学習したモデルのパスを指定してください
+vocoder_ckpt: "/home/ayu/GitHub/ssl-vocoders/epoch=45-step=810824.ckpt"
 
 
 # --- モデル設定 (Fine-tuning時と一致させる) ---
@@ -23,17 +24,6 @@ model:
   hubert_layer: 6
   adapter_hidden_dim: 768
 
-# --- Vocoder設定 ---
-# Prenetのパラメータ (hifigan.pyの実装に合わせる)
-prenet:
-  in_dim: 768     # HuBERTの出力次元数と一致
-  n_layers: 4
-  mel_dim: 80
-  src_fps: 50.0
-  tgt_hop: 256
-  sr: 22050
-
-# Generatorのconfigはvocoder_ckptと同じディレクトリのconfig.jsonから自動で読み込まれます
 
 # --- 出力設定 ---
 output_sampling_rate: 22050
