--- a/configs/adapter_layer_6_mhubert_147.yaml
+++ b/configs/adapter_layer_6_mhubert_147.yaml
@@ -27,8 +27,12 @@ optim:
   betas: [0.9, 0.95]
   max_grad_norm: 1.0
   scheduler:
-    name: "constant_with_warmup"
+    name: "cosine_with_restarts"
     warmup_steps: 10000
+    first_cycle_steps: 100000  # 最初のサイクルの長さ
+    cycle_mult: 1.0           # サイクル長の倍率
+    max_lr: 2.0e-4            # 最大学習率
+    min_lr: 1.0e-6            # 最小学習率
 
 loader:
   num_workers: 8
