--- a/configs/adapter_layer_6_mhubert_147_ddp.yaml
+++ b/configs/adapter_layer_6_mhubert_147_ddp.yaml
@@ -11,10 +11,18 @@ dataset:
   val_path_pattern:
     - /home/ayu/datasets/jvs_preprocessed/jvs-val-{000000..000001}.tar.gz
   shuffle: 1000          # WebDataset 内部 shuffle バッファ
-batch_size: 16
+
+# DDP設定: バッチサイズは1プロセスあたりのサイズ
+batch_size: 8             # 2GPU x 8 = 16 effective batch size
 steps: 2000000
 validation_interval: 10000
 validation_batches: 1
+
+# 分散学習設定
+distributed:
+  enabled: true
+  backend: "nccl"
+  find_unused_parameters: false  # Adapterでは基本的にfalseで十分
 
 training:
   gradient_accumulation_steps: 1
@@ -35,25 +43,25 @@ optim:
     min_lr: 1.0e-6            # 最小学習率
 
 loader:
-  num_workers: 8
+  num_workers: 4            # DDPでは1プロセスあたりのワーカー数を減らす
   pin_memory: true
 
-save_dir: exp/adapter_layer_6_mhubert_147_multi_lang  # チェックポイント保存先
+save_dir: exp/adapter_layer_6_mhubert_147_ddp  # チェックポイント保存先
 log_interval: 1000        # iter ごとに損失表示
 
 # Checkpoint configuration
 checkpoint:
-  save_interval: 10000      # 1kステップごとにチェックポイント保存
+  save_interval: 10000      # 10kステップごとにチェックポイント保存
   resume_from: null        # 再開用チェックポイントパス
-  keep_last_n: 500          # 最新N個のチェックポイントを保持
+  keep_last_n: 20          # DDPでは保存頻度を抑制
   save_wandb_metadata: true # wandb情報も保存
 
-# Wandb logging configuration
+# Wandb logging configuration (main processのみ)
 wandb:
   enabled: true
-  project: "miipher-2-adapter"
+  project: "miipher-2-adapter-ddp"
   entity: null             # デフォルトのwandbエンティティを使用
   name: null               # 実行名を自動生成
-  tags: ["hubert", "adapter", "training"]
-  notes: "Parallel Adapter training for Miipher-2"
+  tags: ["hubert", "adapter", "training", "ddp"]
+  notes: "Parallel Adapter training for Miipher-2 with DDP"
   log_model: false
