infer huberrt l6 conformer

--- a/configs/infer_file.yaml
+++ b/configs/infer_file.yaml
@@ -1,18 +1,15 @@
-# --- 推論の基本設定 ---
 input_wav: "samples/sample.wav"
-output_wav: "samples/miipher2_wavlm_base_l2.wav"
+output_wav: "samples/miipher2_p.wav"
 device: "cuda"
 
 
-adapter_ckpt: "/home/ayu/GitHub/open-miipher-2/exp/wavlm_base_l2/checkpoint_199k.pt"
+adapter_ckpt: "/home/ayu/GitHub/open-miipher-2/exp/adapter_layer_6_mhubert_147/checkpoint_199k_fixed.pt"
 
-vocoder_ckpt: /home/ayu/GitHub/ssl-vocoders/tb_logs/lightning_logs/version_28/checkpoints/epoch=219-step=404920.ckpt
+vocoder_ckpt: /home/ayu/GitHub/ssl-vocoders/tb_logs/lightning_logs/version_12/checkpoints/epoch=58-step=1042796.ckpt
 
-
-# --- モデル設定 (Fine-tuning時と一致させる) ---
 model:
-  hubert_model_name: "microsoft/wavlm-base"
-  hubert_layer: 2
+  hubert_model_name: "utter-project/mHuBERT-147"
+  hubert_layer: 6
   adapter_hidden_dim: 768
 
 
